force-app/main/default/objects/Deployment__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>GitHub Actions</fullName>
            </value>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>