force-app/main/default/objects/Deployment__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Lookup</type>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Environments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
</CustomField>