force-app/main/default/objects/Deployment__c/fields/Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request__c</fullName>
    <label>Pull Request</label>
    <type>Lookup</type>
    <referenceTo>Pull_Request__c</referenceTo>
    <relationshipLabel>Pull Requests</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
</CustomField>