force-app/main/default/objects/Deployment__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Text</type>
    <length>255</length>
</CustomField>